
- Added highlight of chapter title in rfc edit mode (Matthieu Casanova)

- Fixed shellscript do escape single quote with backslash
  (#3557453 Matthieu Casanova)

- Updated ColdFusion mode (#3518536, #3561048 Darien Brown)

- Updated Verilog mode (#3536967 Steve snarum-micron)

}}}
{{{ UI

- Added a right click popup menu with a copy action in the Error dialog
  (#3557023 Matthieu Casanova)

- Avoid trouble with horizontal scrolling (Patch #3134788, EdorFaus)

- Enable ContextMenu via keyboard to VFS-BrowserView (#3560239, Thomas Meyer)

- Added russian localization (patch #3544154 Vladimir Avdonin)
  [merged into 5.0.x]

- Added a possibility to suppress synchronization of the filter in search
  dialog, using a hidden setting in jedit.props: search.dontSyncFilter.
  (Jarek Czekalski)

- Added mnemonics for popup menus in File System Browser (Commands, Plugins,
  Favorites). (Jarek Czekalski)

}}}
{{{ Miscellaneous

- Open Selection macro improvement: an attempt is made to use current
  VFS browser directory as a parent for highlighted filename.

- Fixed unreasonable quadratic operations which could be observable on
  big search&replace-all. (Patch #3533838 by Thomas Meyer)

- Avoided unreasonable memory consumption by duplicate String instances
  that could be allocated for each occurrence in a big
  search&replace-all. (Patch #3528619 by Thomas Meyer)

- Fix high memory usage for large search&replace all operations.
  (Patch #3531515 by Thomas Meyer)

- Fix memory usage of Buffer.calculateHash() (patch# 3560429, Thomas Meyer)

- Make_Bug_Report macro now use logs edit mode to have a little coloring
  in the result (Matthieu Casanova)

- Beep on output option in Activity log settings
  (request #3551931 Jarek Czekalski)

- New Plugin Manager option: Disable obsolete plugins (#2931321 Alan Ezust)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: